chore(sonar): simplify Stream to List conversion